--- a/pc/main.html
+++ b/pc/main.html
@@ -236,7 +236,7 @@
 					});
 				
 				}
-				setTimeout(visualStep1, 2000);
+				setTimeout(visualStep1, 1000);
 				setTimeout(visualStep2, 3000);
 
 				setTimeout(visualStep3, 4000);
@@ -1856,12 +1856,12 @@
 		</div>
 .
 		<div class="quickBan">	
-			<div class="quickList">
+			<div class="quickList active">
 				<a href="javascript:;" class="btnQuickCar"><span class="num">119</span>최근본차량</a>
 				<a href="javascript:;" class="btnQuickFav">관심차량</a>
 				<a href="javascript:;" class="btnQuickPrice">견적보관함</a>
 			</div>
-			<button type="button" class="btnQuick">퀵메뉴</button>
+			<button type="button" class="btnQuick active">퀵메뉴</button>
 			<button type="button" class="btnTop">TOP</button>
 		</div>
 
