--- a/mobile/direct_01.html
+++ b/mobile/direct_01.html
@@ -176,7 +176,7 @@
                 </div>
             </div>
             <ul class="detail-list">
-                <li class="car">
+                <li class="carinfo">
                     <a href="#">
                         <div class="img-wrap"></div>
                         <p>
@@ -184,7 +184,7 @@
                         </p>
                     </a>
                 </li>
-                <li class="insurance">
+                <li class="caroption">
                     <a href="#">
                         <div class="img-wrap"></div>
                         <p>
@@ -192,7 +192,7 @@
                         </p>
                     </a>
                 </li>
-                <li class="maintenance">
+                <li class="history">
                     <a href="#">
                         <div class="img-wrap"></div>
                         <p>
@@ -200,7 +200,7 @@
                         </p>
                     </a>
                 </li>
-                <li class="iot">
+                <li class="carcheck">
                     <a href="#">
                         <div class="img-wrap"></div>
                         <p>
@@ -208,7 +208,7 @@
                         </p>
                     </a>
                 </li>
-                <li class="contract">
+                <li class="inshistory">
                     <a href="#">
                         <div class="img-wrap"></div>
                         <p>
@@ -225,6 +225,12 @@
                     <input type="checkbox" id="agree"/>
                     <label for="agree">위 내용에 동의합니다.</label>
                 </div>
+            </div>
+        </section>
+
+        <section style="padding:48px 0">
+            <div calss="input-item">
+                <img src="./images/renew/warranty_info.png" />
             </div>
         </section>
 
