--- a/mobile/direct_01.html
+++ b/mobile/direct_01.html
@@ -164,7 +164,11 @@
                 <dl>
                     <dt>제네시스 G80 </dt>
                     <dd>가솔린 2.5 AWD 기본형</dd>
-                    <dd>2020년식</dd>
+                    <dd class="flex">
+                        <p>4,442km</p>
+                        <p>2020년식</p>
+                        <p>120하1234</p>
+                    </dd>
                 </dl>
             </a>
         </div>
@@ -233,6 +237,22 @@
                 <img src="./images/renew/warranty_info.png" />
             </div>
         </section>
+
+
+        <section>
+            <div class="sec-tit">
+                <div class="flex">차량 배송지역 선택</div>
+            </div>
+            <div class="input-item">
+                <p class="tit">지역선택<em class="ess">*</em></p>
+                <select id="income">
+                    <option value="" selected>시/도 선택</option>
+                    <option value="">서울시</option>
+                    <option value="">경기도</option>
+                </select>
+            </div>
+        </section>
+
 
         <section class="border-none">
             <div class="sec-tit">
