--- a/mobile/main.html
+++ b/mobile/main.html
@@ -20,6 +20,7 @@
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
 />
+
 <link rel="stylesheet" href="css/common_new.css" type="text/css" />
 <link rel="stylesheet" href="css/main.css" type="text/css" />
 <link rel="stylesheet" href="css/sub.css" type="text/css" />
@@ -27,7 +28,6 @@
 <!-- //front UI css -->
 
 <!--2024.09 개선화면 CSS-->
-<link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/static/pretendard.css" />
 <script src="./js/jquery-3.4.1.min.js"></script>
 <script src="./js/slick.min.js"></script>
 <link rel="stylesheet" type="text/css" href="./css/v2/slick.css" />
@@ -190,8 +190,8 @@
                     </div>
                     <div class="main_bg_video">
                       <video class="main_video_content" autoplay muted loop playsinline poster="./images/renew/icon/video_cover.svg">
-                        <source src="./images/main_visual.mp4" type="video/mp4" />
-                        <source src="img/video.webm" type="video/webm" />
+                        <source src="./images/main_visual_2.mp4" type="video/mp4" />
+                        <source src="./images/main_visual_2.webm" type="video/webm" />
                       </video>
                     </div>
 
@@ -207,7 +207,7 @@
 
                 <div class="srhBx">
                     <p class="txt"><span class="countNum" data-start="0" data-end="1009"></span> 대의 차량이 기다리고 있어요!</p>
-                    <button type="button" class="btnSrhOpen" onclick='location.href="./car_list.html"'>어떤 차량이 궁금하세요?</button>
+                    <button type="button" class="btnSrhOpen">어떤 차량이 궁금하세요?</button>
                     <i class="iconSroll"></i>
                 </div>  
                 <script>
@@ -239,15 +239,10 @@
                 });
                 </script> -->
 
-                <!-- <div class="srhWrap">
+                <div class="srhWrap">
                     <div class="mainSrhBx">
                         <p class="txt"><span class="countNum" data-start="0" data-end="1009"></span> 대의 차량이 기다리고 있어요!</p>
                         <div class="inputSrhBx">
-                            <button type="button" class="btnSrhSelect">구매하기</button>
-                            <ul class="selectSrh">
-                                <li><a href="#">구매하기</a></li>
-                                <li><a href="#">렌트하기</a></li>
-                            </ul>
                             <input type="text" class="mainSrhTxt" placeholder="어떤 차량이 궁금하세요?" title="검색어 입력란" value="쏘나">
                             <ul class="srhTxtList">
                                 <li><a href="#"><span class="bold">쏘나</span><span>타(DN8)</span></a></li>
@@ -257,7 +252,23 @@
                         </div>
                     </div>
                     <button type="button" class="btnSrhClose">닫기</button>
-                </div> -->
+                </div>
+
+                <script>
+				$('.btnSrhSelect').on('click',function(){    
+					$(this).toggleClass('active');
+					$('.selectSrh').toggleClass('active');
+				});
+				$('.btnSrhOpen').on('click',function(){    
+					$('.srhBx').hide();
+					$('.srhWrap').fadeIn();
+				});
+				$('.btnSrhClose').on('click',function(){    
+					$('.srhBx').show();
+					$('.srhWrap').fadeOut();
+				});
+                </script>
+
             </div> 
         </div>
 
