--- a/mobile/car-detail.html
+++ b/mobile/car-detail.html
@@ -36,7 +36,7 @@
 <script src="js/ui.js"></script>
 <script src="js/nayuda.js"></script> <!-- 230720 추가 (.floating-page-top 이벤트) -->
 <!-- 230412 : 360도뷰 cdn 추가 -->
-<script src="https://cdn.scaleflex.it/plugins/js-cloudimage-360-view/latest/js-cloudimage-360-view.min.js"></script>
+<script src="js/js-cloudimage-360-view.min.js"></script>
 <!-- //front UI js -->
 
 </head>
@@ -213,9 +213,8 @@
 								<div class="badge">
 									<!-- 230717 뱃지 수정 -->
 									<span class="badge-lotte-cert">다이렉트전용</span>
-									<span class="ele-badge badge-type3">관리차</span>
-									<span class="ele-badge badge-type3">진단차</span>
-									<span class="ele-badge badge-type3">인증차</span>
+									<span class="ele-badge badge-type3">정기관리</span>
+									<span class="ele-badge badge-type3">무사고</span>
 								</div>
 								<span class="hits">342명</span> <!-- 230717 위치이동 -->
 							</div>
