--- a/mobile/main.html
+++ b/mobile/main.html
@@ -15,12 +15,8 @@
 <meta property="og:image" content="" />
 <!-- front UI css// -->
 <link rel="stylesheet" href="css/fonts.css" type="text/css" />
-<link rel="stylesheet" href="css/jquery-ui.min.css">
-<link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
-/>
-
+<link rel="stylesheet" href="css/jquery-ui.min.css"/>
+<link rel="stylesheet" href="css/swiper-bundle.min.css"/>
 <link rel="stylesheet" href="css/common_new.css" type="text/css" />
 <link rel="stylesheet" href="css/main.css" type="text/css" />
 <link rel="stylesheet" href="css/sub.css" type="text/css" />
@@ -1279,7 +1275,7 @@ $('.btnSrhClose').on('click', function() {
     <script src="js/ui.js"></script>
     
     <!-- Swiper JS -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    <script src="js/swiper-bundle.min.js"></script>
     <!-- //front UI js -->
 
     <script>
