--- a/mobile/popup-quote.html
+++ b/mobile/popup-quote.html
@@ -93,34 +93,78 @@
 						<h4>(VAT 포함)</h4>
 						<ul class="psc-wrap">
 							<li class="prc_advance sub">
-								<span class="tit">선납금 <var>(10%)</var></span> <!-- 230926 var 태그 추가 -->
-								<span class="val"><var>4,000,000</var>원</span>
+								<span class="tit">차량판매가</span> <!-- 230926 var 태그 추가 -->
+								<span class="val"><var>30,000,000</var>원</span>
 							</li>
-							<!-- 231004 보증금 추가 -->
 							<li class="prc_deposit sub">
-								<span class="tit">보증금 <var>(10%)</var></span> <!-- 230926 var 태그 추가 -->
-								<span class="val"><var>4,000,000</var>원</span>
+								<span class="tit">이전등록비</span> <!-- 230926 var 태그 추가 -->
+								<span class="val"><var>1,200,000</var>원</span>
 							</li>
-							<!-- 230926 인수가 위치 이동 -->
-							<!--
+							<li class="prc_deposit sub">
+								<span class="tit">매도수수료</span> <!-- 230926 var 태그 추가 -->
+								<span class="val"><var>440,000</var>원</span>
+							</li>
+							<li class="prc_deposit sub">
+								<span class="tit">탁송료</span> <!-- 230926 var 태그 추가 -->
+								<span class="val"><var>80,000</var>원</span>
+							</li>
 							<span class="line"></span>
-							<li class="prc_acq">
-								<span class="tit">인수가</span>
-								<span class="val"><var>6,000,000</var>원</span>
+							<li class="prc_btn_wrap">
+								<div class="tab-content">
+									<div class="warranty-price">
+										<div class="title">
+											<h3>롯데 Warranty</h3>
+											<span class="more">자세히보기</span>
+										</div>
+										<div class="radio-wrap">
+											<div class="radio">
+												<div class="radio-title">
+													<input type="radio" id="radio22" name="radio22" value="" checked=""
+														style="position:absolute; top:23px;"
+													>
+													<label for="radio22">
+													<span class="warranty-name">	
+														12개월
+														<em>(10,000km)</em>
+													</span>
+													<span class="warranty-charge">
+														<em>550,000원</em>
+														450,000원
+													</span>
+													</label>
+												</div>
+											</div>
+										</div>
+										<div class="radio-wrap">
+											<div class="radio">
+												<div class="radio-title">
+													<input type="radio" id="radio23" name="radio22" value=""
+														style="position:absolute; top:23px;"
+													>
+													<label for="radio23">
+													<span class="warranty-name">	
+														6개월
+														<em>(5,000km)</em>
+													</span>
+													<span class="warranty-charge">
+														<em>200,000원</em>
+														0원
+													</span>
+													</label>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
 							</li>
-							-->
 							<li class="prc_total">
-								<span class="tit">월 대여료</span>
-								<span class="val">
-									월 <var>600,000</var>원
+								<span class="tit">총 예상 결제 금액</span>
+								<span class="val"><var>30,580,000</var>원
 								</span>
 							</li>
 							<!-- 230926 인수가 위치 이동 -->
 							<span class="line"></span>
-							<li class="prc_acq">
-								<span class="tit">계약만료 후 차량인수 희망 시, 인수가</span>
-								<span class="val"><var>6,000,000</var>원</span>
-							</li>
+
 						</ul>
 
 						<!-- 231110 텍스트 한줄씩 span 태그로 묶기 // -->
