--- a/mobile/login_pass_01.html
+++ b/mobile/login_pass_01.html
@@ -70,7 +70,7 @@
 					</div>
 
 					<div class="login-btn">
-						<button type="submit" class="bt-common-type2 bt-full rnd bt-login">PASS 인증하기</button>
+						<button type="submit" class="bt-common-type2 bt-full rnd bt-login" onclick="location.href='direct_01.html'">PASS 인증하기</button>
 					</div>
 					<p class="login-desc">PASS 인증 시 비회원도 나의 견적/계약 내역을 확인 가능합니다.</p>
 				</section>
