--- a/mobile/popup-reserve.html
+++ b/mobile/popup-reserve.html
@@ -63,7 +63,11 @@
 							<img src="images/dummy/@detail-car-image2.jpg" alt="차량이미지" />
 							<div class="txt-wrap">
 								<h1>ALL NEW REXTON (D) 2.2 프레스티지 5인승 2WD</h1>
-								<p class="platenumber">23허1234</p>
+								<p class="platenumber">
+									<span>2020/10(20년형)</span>
+									<span>12,700km</span>
+									<span>23허1234</span>
+								</p>
 								<p class="carprice">35,800,000원</p>
 							</div>
 						</div>
@@ -74,15 +78,15 @@
 							<div class="insert-form-group">
 								<h3 class="insert-form-tit">신청자 정보</h3>
 								<div class="input-item">
-									<div class="ipt-tit">신청자명</div>
+									<div class="ipt-tit">이름</div>
 									<div class="ipt-cont">
-										<span class="ip-wrap"><input type="text" value="" /></span>
+										<span class="ip-wrap"><input type="text" value="" placeholder="이름을 입력해주세요"/></span>
 									</div>
 								</div>
 								<div class="input-item">
 									<div class="ipt-tit">연락처</div>
 									<div class="ipt-cont">
-										<span class="ip-wrap"><input type="tel" value="" /></span>
+										<span class="ip-wrap"><input type="tel" value=""  placeholder="연락처를 입력해주세요"/></span>
 									</div>
 								</div>
 							</div>	
@@ -138,7 +142,7 @@
 				<div class="pop-contents agree-accordion-wrap"><img src="./images/test/lotte-map.png" /></div>
                 <ul>
 					<li>
-						<p class="tit">지점번호</p>
+						<p class="tit">지점연락처</p>
 						<p class="txt">031-322-8000</p>
 					</li>
 					<li>
@@ -149,8 +153,8 @@
             </div>
         </div>
         <div class="btn-wrap">
-            <button type="button" class="bt-tel">0508-0328-8827</button>
-            <button type="button" class="light" onclick="location.href='./direct_01_2.html'">방문예약</button>
+            <button type="button" class="bt-tel">통화하기</button>
+            <button type="button" class="light" onclick="location.href='./direct_01_2.html'">방문신청하기</button>
         </div>
     </div>
 
