--- a/mobile/car-detail.html
+++ b/mobile/car-detail.html
@@ -796,7 +796,7 @@
 						</div>
 					
 						<!-- 230621 가격정보 영역 추가 -->
-						<button class="btn_toggle" onclick="$('#fixed-psc-group').toggleClass('fold')">토글버튼</button>
+						<button class="btn_toggle" onclick="$('#fixed-psc-group').toggleClass('fold')"></button>
 						<div class="info-wrap">
 
 							<!-- 기본형 -->
@@ -1035,18 +1035,15 @@
 							다른 고객과 견적 상담이 진행중인 차량입니다.
 						</div>
  -->
-						<div class="btn-group"> <!-- 230621 div 추가-->
-							<!-- 230502 찜하기 hidden -->
+						<!-- <div class="btn-group">  -->
 							<!-- <button type="button" class="bt-favorite" onclick="ui.clsToggleFn(this, 'on');ui.clsToggleFn($('.notification'),'active')">찜</button> -->
-							<button type="button" class="bt-common-type3" onclick="location.href='popup-reserve.html'">방문예약</button>
+							<!-- <button type="button" class="bt-common-type3" onclick="location.href='popup-reserve.html'">방문예약</button>
 							<button type="button" class="bt-common-type3" onclick="location.href='popup-quote.html'">상담신청</button>
-							<button type="button" class="bt-common-type3 bt-tel"></button>
-							<!-- // 230926 버튼 이벤트 수정 -->
-
-							<!-- 230804 : 상담신청 진행중 버튼 추가 -->
+							<button type="button" class="bt-common-type3 bt-tel"></button> -->
 							<!-- <button type="button" class="bt-common-type1" disabled >상담 진행중</button> -->
-						</div>
-						<div class="btn-group btn-second"> <!-- 230621 div 추가-->
+						<!-- </div> -->
+						<div class="btn-group btn-second">
+							<button type="button" class="bt-common-type3 bt-tel">전화상담</button>
 							<button type="button" class="bt-common-type1"onclick="location.href='login_pass_01.html'">온라인 계약하기</button>
 						</div>
 					</div>
